# simple_task_manager

./: .env.example  .gitignore  LICENSE  README.md  compose.yml  pyproject.toml
app/: Dockerfile  config.py
app/db/sqlalchemy/: __init__.py  gateway.py  models.py
app/exceptions/: __init__.py  invalid_status_transition.py  task_cannot_be_completed.py  task_cannot_be_deleted.py  task_not_found.py
app/main/: __init__.py  di.py  routers.py  web.py
app/main/api/: __init__.py  exception.py  responses.py  root.py  task.py
app/models/: __init__.py  status.py  task.py
app/protocols/: __init__.py  db_gateway.py  stub.py  uow.py
app/services/: __init__.py  task_service.py
app/tests/: test_main.py
front/: Dockerfile  index.html  package-lock.json  package.json  script.js
front/src/: App.vue  main.js
front/src/components/: Error.vue  Task.vue  TaskActions.vue  TaskCreate.vue  TaskData.vue  TaskDelete.vue  TaskEdit.vue  TaskList.vue
front/src/css/: style.css
